# novel-agent-studio

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  NovelAgentStudio.spec  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 13da8433608a_phase_1_novel_foundations.py  9f43d2a6c1b8_phase_2_provider_protocols.py  a6c8e0f2b419_phase_6_context_memory.py  b94f8d2c710a_v2_studio_flow.py  c31e6d7b924f_phase_3_generic_http.py  c5e7a9b1d320_generation_job_leases.py  d7e9f1a3c520_phase_7_approvals_writeback.py  e47a1d8f2c60_phase_4_model_control.py  e8f1c3d5a740_story_order_constraints.py  f8b2c4d6e810_phase_5_agent_workflows.py
backend/app/: __init__.py  cli.py  database.py  main.py  migrations.py
backend/app/api/: approvals.py  context.py  custom_api.py  model_center.py  model_control.py  novels.py  release.py  studio.py  workflows.py
backend/app/core/: config.py  logging_config.py  security.py  text.py
backend/app/models/: __init__.py
backend/app/repositories/: __init__.py
backend/app/schemas/: __init__.py  approvals.py  context.py  custom_api.py  (+4 more)
backend/tests/: fake_provider.py  test_desktop_launcher.py  test_development_bootstrap.py  test_document_import.py  test_generation_jobs.py  test_migrations.py  test_phase1.py  test_phase2_protocols.py  test_phase3_custom_api.py  test_phase4_model_control.py  test_phase5_workflows.py  test_phase6_context.py  test_phase7_approvals.py  test_phase7_changesets.py  test_phase7_workflow.py  test_phase8_performance.py  test_phase8_release.py  test_studio_v2.py
(+131 files in other folders)
